welcome.lessons.welcome.instructions.Instructions.scala.code
baiseBrosse()
avance()
avance()
droite()
avance()
avance()
droite()
avance()
avance()
droite()
avance()
leveBrosse()
droite()
avance()